# agent-integrations-manager

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  README.md  TESTDRIVE.md  aim.lock.toml  aim.toml  alembic.ini  justfile  pyproject.toml
.agent-init/: manifest.json
.github/actions/aim/: action.yml
.github/workflows/: ci.yaml  hermes-interactive.yaml  hermes-issue-triage.yaml  hermes-review.yaml  release.yaml
assets/: aim-lock-sync.tape
docs/: org-policy-setup.md  project-templates.md
examples/kinds/: opencode.toml
examples/targets/: opencode.toml
readme-creator-workspace/iteration-1/: all_grades.json  grade.py
readme-creator-workspace/iteration-1/eval-3/: eval_metadata.json
readme-creator-workspace/iteration-2/: aggregate.py  all_grades.json  benchmark.json  benchmark.md  grade.py  review.html
readme-creator-workspace/iteration-2/eval-1/: eval_metadata.json
readme-creator-workspace/iteration-2/eval-2/: eval_metadata.json
readme-creator-workspace/iteration-2/eval-3/: eval_metadata.json
scripts/: capture_screenshots.py  generate_logo.py
skills/agent-installer/: SKILL.md
skills/readme-creator/evals/: evals.json
skills/readme-creator/examples/: readme.md
skills/readme-creator/scripts/: check_readme.py
skills/repo-add/: SKILL.md
src/agent_init/: cli.py  mcp_server.py
src/agent_init/core/: agent_install.py  agents.py  db.py  default_mcp_servers.py  doctor.py  format.py  init.py  install.py  layout_profiles.py  manifest_migrate.py  mcp_install.py  mcp_registry.py  models.py  paths.py  profiles.py  repo_rules.py  repos.py  rules.py  skills.py  templates.py  validation.py
src/agent_init/tui/: app.py  app.tcss
src/aim/: cli.py
src/aim/cli/: __init__.py  _lazy.py  _shared.py
src/aim/core/: agent_files.py  agent_install.py  agents.py  agents_md.py  archetype_install.py  archetypes.py  db.py  declarations.py  doctor.py  git.py  init.py  install.py  layout_profiles.py  lock.py  manifest.py  manifest_migrate.py  mcp_install.py  mcp_registry.py  models.py  paths.py  plugin_install.py  plugin_kinds.py  plugins.py  policy.py  profiles.py  prune.py  repo_rules.py  repo_templates.py  repos.py  risk.py  rule_install.py  rules.py  settings_json.py  skills.py  sync.py  target_install.py  targets.py  validation.py
src/aim/templates/: default.md.j2
src/aim/tui/: app.py  errors.py
src/atm/core/: agents_md.py
src/atm/templates/: default.md.j2
tests/: conftest.py  test_mcp_server.py
tests/core/: test_agent_install.py  test_agents.py  test_agents_md.py  test_archetypes.py  test_bulk_update.py  test_cli_add_url.py  test_cli_profile.py  test_cli_target.py  test_cli_view.py  test_content_guard.py  test_db.py  test_db_migration.py  test_doctor.py  test_git.py  test_init.py  test_install.py  test_layout_profiles.py  test_lock.py  test_manifest.py  test_mcp_install.py  test_mcp_registry.py  test_paths.py  test_plugin_install.py  test_plugin_kinds.py  test_plugins.py  test_policy.py  test_profiles.py  test_prune.py  test_repo_identity.py  test_repo_rules.py  test_repo_templates.py  test_repos.py  test_review_fixes.py  test_risk.py  test_rule_compose.py  test_rules.py  test_skills.py  test_sync.py  test_target_install.py  test_targets.py  (+3 more)
tests/tui/: conftest.py  test_archetypes_screen.py  test_config_screen.py  test_layout_profile_picker.py  test_layout_profiles_screen.py  test_mcp_screen.py  test_modals.py  test_palette.py  test_project_screen.py  test_project_templates_screen.py  test_repo_filter.py  test_sanitize.py  test_snapshots.py  test_targets_screen.py  test_template_builder.py  test_tui_smoke.py
(+108 files in other folders)
