[project]
name = "agent-init"
version = "0.1.0"
description = "Scaffolder for agent-engineering projects (AGENTS.md, reusable skills, rules)."
authors = [
    { name = "Jasper Ginn", email = "jasperginn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.38",
    "rich>=13.0.0",
    "stamina>=24.3.0",
    "textual==8.2.7",
    "typer>=0.26.7",
]

[project.scripts]
agent-init = "agent_init.cli:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-textual-snapshot>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]
ignore = ["E501", "B008"]  # B008: Typer/Click require call-in-default for parameter metadata

[tool.ruff.lint.per-file-ignores]
"src/agent_init/tui/**" = ["RUF012"]  # Textual BINDINGS = [...] is the framework idiom

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
