[project]
name = "aim"
version = "0.1.0"
description = "Agent Integrations Manager: scaffold and manage agent-engineering projects (AGENTS.md, reusable skills, rules, MCP servers, sub-agents)."
authors = [
    { name = "Jasper Ginn", email = "jasperginn@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "httpx>=0.28.0",
    "jinja2>=3.1.6",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.38",
    "rich>=13.0.0",
    "stamina>=24.3.0",
    "textual==8.2.7",
    "tomli-w>=1.2.0",
    "typer>=0.26.7",
    "alembic>=1.18.4",
]

[project.optional-dependencies]
# Cheap local injection/jailbreak screen (ONNX encoder) that aim runs in-process.
# (numpy comes transitively with onnxruntime.)
risk = ["onnxruntime>=1.18", "tokenizers>=0.20", "huggingface-hub>=0.25"]
# Rule-evaluating judge. aim only needs DSPy (structured output); the LM behind it
# is the user's responsibility to host and configure (local server, remote endpoint,
# etc.) — model hosting is outside aim's concern.
risk-judge = ["dspy>=2.5"]

[project.scripts]
aim = "aim.cli:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "prek>=0.4.5",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-textual-snapshot>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "RUF"]
ignore = ["E501", "B008"]  # B008: Typer/Click require call-in-default for parameter metadata

[tool.ruff.lint.per-file-ignores]
"src/aim/tui/**" = ["RUF012"]  # Textual BINDINGS = [...] is the framework idiom

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# `llm`/`integration` tests hit real models/services and are excluded by default.
# Run them explicitly, e.g.: uv run pytest -m llm
addopts = "-m 'not llm and not integration'"
markers = [
    "llm: exercises a real language model (needs credentials; not run by default)",
    "integration: needs external services or downloaded models (not run by default)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
